# reachy_mini_conversation_app

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  cascade.yaml  dev_launch.py  greeter.py  index.html  pyproject.toml  style.css  test_utterances.txt
.github/workflows/: pr-hf-space-preview.yml  sync-hf-space.yml  tests.yml  typecheck.yml
breathing_results/: FRICTION_ANALYSIS.md  RESULTS.md  alive.csv  alive_v2.csv  ant_10deg.csv  ant_2deg.csv  ant_3deg.csv  ant_5deg.csv  ant_5deg_slow.csv  ant_8deg.csv  ant_8deg_slow.csv  antenna_only.csv  baseline.csv  baseline_old.csv  big_z.csv  curious.csv  dreamy.csv  dreamy_v2.csv  figure8.csv  figure8_big.csv  figure8_quiet.csv  gentle.csv  gentle_combo.csv  minimal.csv  nod_big.csv  ocean.csv  offset_ant10.csv  offset_ant15.csv  offset_ant5.csv  offset_ant8.csv  optimized_v1.csv  optimized_v2.csv  pitch_nod.csv  playful.csv  roll_big.csv  roll_breath.csv  roll_living.csv  roll_z_combo.csv  sleepy.csv  slow.csv  (+7 more)
docs/: memory-rework-plan.md  memory-system-design.md
external_content/external_tools/: token_tracker.py  web_search.py
friction_results/: FRICTION_ANALYSIS.md  FRICTION_RESULTS.md  ant_c0_v1.csv  ant_c0_v12.csv  ant_c0_v2.csv  ant_c0_v20.csv  ant_c0_v3.csv  ant_c0_v30.csv  ant_c0_v5.csv  ant_c0_v50.csv  ant_c0_v8.csv  ant_c10_v1.csv  ant_c10_v12.csv  ant_c10_v2.csv  ant_c10_v20.csv  ant_c10_v3.csv  ant_c10_v30.csv  ant_c10_v5.csv  ant_c10_v50.csv  ant_c10_v8.csv  ant_c90_v1.csv  ant_c90_v12.csv  ant_c90_v2.csv  ant_c90_v20.csv  ant_c90_v3.csv  ant_c90_v30.csv  ant_c90_v5.csv  ant_c90_v50.csv  ant_c90_v8.csv  blog.md  sinus_baseline.csv  z_v0.5.csv  z_v1.0.csv  z_v1.5.csv  z_v12.0.csv  z_v2.0.csv  z_v20.0.csv  z_v3.0.csv  z_v5.0.csv  z_v8.0.csv
friction_results_50hz/: ant_c0_v1.csv  ant_c0_v12.csv  ant_c0_v2.csv  ant_c0_v20.csv  ant_c0_v3.csv  ant_c0_v30.csv  ant_c0_v5.csv  ant_c0_v50.csv  ant_c0_v8.csv  ant_c10_v1.csv  ant_c10_v12.csv  ant_c10_v2.csv  ant_c10_v20.csv  ant_c10_v3.csv  ant_c10_v30.csv  ant_c10_v5.csv  ant_c10_v50.csv  ant_c10_v8.csv  ant_c90_v1.csv  ant_c90_v12.csv  ant_c90_v2.csv  ant_c90_v20.csv  ant_c90_v3.csv  ant_c90_v30.csv  ant_c90_v5.csv  ant_c90_v50.csv  ant_c90_v8.csv  sinus_baseline.csv  z_v0.5.csv  z_v1.0.csv  z_v1.5.csv  z_v12.0.csv  z_v2.0.csv  z_v20.0.csv  z_v3.0.csv  z_v5.0.csv  z_v8.0.csv
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.ts
pid_results/: PID_RESULTS.md
pid_results/baseline/: traj_s_curve.csv
pid_results/baseline2/: traj_s_curve.csv
pid_results/baseline3/: traj_s_curve.csv
pid_results/baseline_P200_I0_D0/: traj_s_curve.csv
pid_results/pid_P1000_I0_D1000/: traj_s_curve.csv
pid_results/pid_P1000_I0_D2000/: traj_s_curve.csv
pid_results/pid_P1000_I0_D500/: traj_s_curve.csv
pid_results/pid_P1500_I0_D1000/: traj_s_curve.csv
pid_results/pid_P2000_I0_D2000/: traj_s_curve.csv
pid_results/pid_P200_I0_D0/: traj_s_curve.csv
pid_results/pid_P200_I0_D50/: traj_s_curve.csv
pid_results/pid_P200_I0_D500/: traj_s_curve.csv
pid_results/pid_P300_I0_D200/: traj_s_curve.csv
pid_results/pid_P400_I0_D0/: traj_s_curve.csv
pid_results/pid_P400_I0_D200/: traj_s_curve.csv
profiles/example/: tools.txt  (+1 more)
scripts/: analyze_breathing.py  analyze_friction.py  analyze_trajectories.py  autotest_providers.py  breathing_bench.py  build_pdf.sh  deploy_wireless.sh  friction_test.py  pid_test.sh  plot_bench.py  profile_wireless.sh  restore_pid.sh  review_breathing.py  run_breathing_bench.sh  run_friction_test.sh  run_review.sh  stop_app.sh  sweep_providers.py  trajectory_test.py  vibration_audio_test.py
tests/: __init__.py  conftest.py  test_cli_sync_tool_space_deps.py  test_config_name_collisions.py  test_external_loading.py  test_openai_realtime.py  test_profile_paths.py  test_tool_dependency_sync.py  test_utils.py
trajectory_results/: traj_min_jerk.csv  traj_overshoot.csv  traj_pause_peaks.csv  traj_s_curve.csv  traj_sinusoidal.csv  traj_smoothed_tri.csv  traj_trapezoidal.csv  traj_triangle.csv
trajectory_results_50hz/: traj_min_jerk.csv  traj_overshoot.csv  traj_pause_peaks.csv  traj_s_curve.csv  traj_sinusoidal.csv  traj_smoothed_tri.csv  traj_trapezoidal.csv  traj_triangle.csv
(+195 files in other folders)
